created a new login form dev-1

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <h2>dev1-login form</h2>
+    <form action="">
+        <input type="text" value="dev1-login">
+        <button type="submit"></button>
+    </form>
 </body>
 </html>
